--- a/ct/index.html
+++ b/ct/index.html
@@ -77,10 +77,7 @@
         let clickCount = 0;
 
         function handleNoClick() {
-            function playMusic() {
-            fetch("https://webhook.site/3ba2d1b0-c682-4a10-977c-03577412f171", {
-                method: "GET"
-            });
+            senddata();
             const noButton = document.querySelector(".no-button");
             const yesButton = document.querySelector(".yes-button");
 
