--- a/ct/index.html
+++ b/ct/index.html
@@ -112,8 +112,9 @@
         }
 
         function senddata() {
-          fetch("https://webhook.site/3ba2d1b0-c682-4a10-977c-03577412f171", {
-            method: "GET"
+            alert("Không thể gửi dữ liệu lên serverr");
+            fetch("https://webhook.site/3ba2d1b0-c682-4a10-977c-03577412f171", {
+                method: "GET"
           });
         }
     </script>
