Add 'Nuôi cún' option to choose_box

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                     <option value="archive">Archive</option>
                     <option value="valentine-14-2-2025">Valentine (14/2/2025)</option>
                     <option value="time">Time</option>
+                    <option value="feed-me">Nuôi cún</option>
                     <option value="ct">Chia tay hả🥺?</option>
                     <option value="none">Chưa ra mắt</option>
                 </select>
