--- a/feed-me/pay-gateway/index.html
+++ b/feed-me/pay-gateway/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Pay</title>
     <link rel="stylesheet" href="css/pay-gateway.css" />
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🍜</text></svg>">
   </head>
 
   <body>
@@ -99,3 +101,4 @@
     <script src="js/pay-gateway.js"></script>
   </body>
 </html>
+
