--- a/feed-me/pay-gateway/index.html
+++ b/feed-me/pay-gateway/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pay</title>
-    <link rel="stylesheet" href="css/pay-gateway.css" />
+    <link rel="stylesheet" href="pay-gateway/css/pay-gateway.css" />
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🍜</text></svg>">
   </head>
@@ -11,7 +11,7 @@
     <div class="page-container">
       <header class="header">
         <div class="header-content">
-          <img src="img/vietqr_ico.png" alt="vietqr logo" class="logo-small" />
+          <img src="pay-gateway/img/vietqr_ico.png" alt="vietqr logo" class="logo-small" />
           <span class="header-title"
             >Quét mã thanh toán miễn phí qua VietQR</span
           >
@@ -23,7 +23,7 @@
           <!-- Banner Notification -->
           <div class="info-banner">
             <div class="banner-icon">
-              <img src="img/vietqr_ico.png" alt="vietqr logo" />
+              <img src="pay-gateway/img/vietqr_ico.png" alt="vietqr logo" />
             </div>
             <p class="banner-text">
               Bạn đang sử dụng dịch vụ chuyển tiền được cung cấp bởi VietQR
@@ -38,7 +38,7 @@
               <label>Người nhận</label>
               <div class="user-info">
                 <div class="avatar">
-                  <img src="img/avatar.jpg" alt="Avatar" />
+                  <img src="pay-gateway/img/avatar.jpg" alt="Avatar" />
                 </div>
                 <div class="user-name">
                   <strong>Đặng Trung Sơn</strong>
@@ -98,7 +98,8 @@
         </div>
       </main>
     </div>
-    <script src="js/pay-gateway.js"></script>
+    <script src="pay-gateway/js/pay-gateway.js"></script>
   </body>
 </html>
+
 
