Fix HTML formatting in pay-gateway index file

--- a/feed-me/pay-gateway/index.html
+++ b/feed-me/pay-gateway/index.html
@@ -12,9 +12,7 @@
       <header class="header">
         <div class="header-content">
           <img src="pay-gateway/img/vietqr_ico.png" alt="vietqr logo" class="logo-small" />
-          <span class="header-title"
-            >Quét mã thanh toán miễn phí qua VietQR</span
-          >
+          <span class="header-title">Quét mã thanh toán miễn phí qua VietQR</span>
         </div>
       </header>
 
@@ -62,7 +60,7 @@
           <div class="payment-method selected">
             <div class="method-info">
               <img
-                src="img/vietqr_ico.png"
+                src="pay-gateway/img/vietqr_ico.png"
                 alt="vietqr logo"
                 class="method-logo"
               />
@@ -101,5 +99,6 @@
     <script src="pay-gateway/js/pay-gateway.js"></script>
   </body>
 </html>
+
 
 
