Add recent donation entry in index.html

--- a/feed-me/index.html
+++ b/feed-me/index.html
@@ -900,6 +900,13 @@
             // Thêm người donate mới theo format bên dưới
             // Để mảng rỗng [] nếu chưa có ai donate
             recentDonations: [
+                {
+                    avatar: "😇",
+                    name: "Tiến",
+                    message:"PHAM DUY TIEN 1 LY TRA DA- Ma GD ACSP/ Xj781451",
+                    amount: 10000,
+                    time: "25-12-2025 21:49:45"
+                },
                 // Ví dụ (bỏ comment // để sử dụng):
                 // {
                 //     avatar: "😇",                           // Emoji avatar
