--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
                 <h2>Chọn dii</h2>
                 <select id="choose_box">
                     <option value="archive">Archive</option>
-                    <option value="valentine-14-2-2025">Valentine (14/2/2025)</option>
+                    <option value="valentine_2025">Valentine 2025</option>
+                    <option value="valentine_2026">Valentine 2026</option>
                     <option value="time">Time</option>
                     <option value="feed-me">Nuôi cún</option>
                     <option value="ct">Chia tay hả🥺?</option>
