--- a/valentine_2026/index.html
+++ b/valentine_2026/index.html
@@ -22,10 +22,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-black overflow-hidden">
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="index.tsx"></script>
 </body>
 </html>
