--- a/valentine_2026/index.html
+++ b/valentine_2026/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GestureVolumetrics</title>
+    <title>Love particles</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body, html { margin: 0; padding: 0; overflow: hidden; background-color: #050505; color: white; }
