Add 'POS Manager' option to dropdown

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                     <option value="time">Time</option>
                     <option value="feed-me">Nuôi cún</option>
                     <option value="ct">Chia tay hả🥺?</option>
+                    <option value="POS">POS Manager</option>
                     <option value="none">Chưa ra mắt</option>
                 </select>
                 <div class="sparkle-button">
